refactor disease download code to simplify